# TARS

./: .dockerignore  .gitignore  Dockerfile  README.md  build-and-deploy.sh  deployment-stage.yml  docker-compose.yml  import-secrets-stage.sh  import-secrets.sh  langgraph.json  package.json  pyproject.toml  requirements.txt  test_api_debug.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
TARS/: langgraph.json  main.js  main.py  pyproject.toml  requirements.txt
TARS/AI_module/: agent.py  custom_tools.py  tools.py
TARS/config/: config.local  config.py
TARS/email_module/: email_reader.py  gmail_oauth_setup.py  gmail_reader.py  load_creds.py  oauth_setup.py
TARS/evals/: CI_evaluator.py
TARS/graphs/: agent.js  agent.py  core_agent.py  custom_tools.py  lang_graph_chat_agent.py  langgraph_tavily_agent.py  vanilla_llm.py
TARS/graphs/tools/: custom_tools.py
TARS/graphs/utils/: nodes.py  tools.py
TARS/ingestors/: rag_test.py
TARS/metrics/: event_instrumentation.py
TARS/models/generic_llms/: anthropic.py  google_ai.py  openai.js  openai.py
TARS/retrievers/gmail/: gmail_reader.py
TARS/surfaces/API/: README_feedback.md  api.js  api.py  test_feedback.py
TARS/surfaces/slack/: slack_app.js  slack_app.py
TARS/surfaces/web/: web.py
TARS/surfaces/web/react-app/: package.json
TARS/surfaces/web/react-app/src/: App.js
TARS/surfaces/web/react-app/src/components/: ChatComponent.js  DashboardComponent.js  LoginComponent.js
TARS/tests/: __init__.py
TARS/tests/evals/: test_CI_evaluator.py  test_agent_evaluator.py
TARS/tests/graphs/: __init__.py  test_agent.py
TARS/tests/models/generic_llms/: test_anthropic.py  test_google_ai.py  test_openai.py
TARS/tests/surfaces/: __init__.py
TARS/tests/surfaces/API/: api_test.py  test_api.js  test_api.py
TARS/tests/surfaces/slack/: __init__.py  slack_app_test.py  test_slack_app.js  test_slack_app.py
client/: .gitignore
deployment/: deployment-prod.yaml  deployment.yaml  deployment.yml
docker/: .dockerignore
evals/: agent_evaluator.py  evals.json  evals.jsonl
infrastructure/: delete.sh  deploy.sh  deployment.yml  eks_setup.yaml
scripts/: import-secrets-stage.sh  (+1 more)
(+11 files in other folders)
